# azalea.cloud

./: .gitignore  .gitmodules  .vercelignore  ACCOUNT_MANAGEMENT.md  ALTERNATIVE_SOLUTIONS.md  BACKEND_SETUP.md  DEPLOYMENT.md  ESCAPE_GUIDE.md  GIT_SETUP.md  GOOGLE_PROXY_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  SETUP.md  WEBVM_BUILD.md  WEBVM_INTEGRATION.md  api.js  claw.js  cron.example  env.example  index.html  next.config.ts  package-lock.json  package.json  server.js  shell.html  tailwind.config.ts  theia.js  tsconfig.json  vercel.json  vite.config.ts
api/: environment.ts  proxy.ts
backend/: cloudMetadataServer.js  init-backend.sh  package.json  server.js  start-backend.sh  vercelTunnelDaemon.js
coolvm/: CoolVM.cabal  README.md
coolvm/src/: CoolVM.hs  Main.hs
docs/: AUTO_AUTHENTICATION.md  CLOUD_SERVICE_DEPLOYMENT.md  CLOUD_SERVICE_SUMMARY.md  COOLVM_INTEGRATION.md  DEVOPS_INTEGRATION.md  HASKELL_SETUP.md  IMPROVEMENTS_SUMMARY.md  METADATA_SERVER_AUTH.md  SESSION_MANAGEMENT.md  SITE_TESTING.md  SPINUP_VM_INTEGRATION.md  TUNNELING_SETUP.md  UNLIMITED_SESSIONS.md
haskell-azaleae/: .gitignore  LICENSE  README.md  package.json  vercel.json
public/: azalea-shell.html
scripts/: auth_with_custom_metadata.sh  auth_with_metadata.sh  build-coolvm.sh  build-haskell.sh  build-webvm.sh  customize_environment.sh  gcloud_with_token.sh  generate_keys.sh  git-pull.sh  git-push.sh  infrastructure_test.sh  init_cloud_service.sh  schedule_jobs.sh  session_manager.sh  set_metadata.sh  test-site.sh
src/: App.tsx  CoolVM.hs  index.css  (+1 more)
(+106 files in other folders)
