cabal-version:      3.0
name:               coolvm
version:            2.0.0
synopsis:           Modernized CoolVM - A clean, lazily evaluated, side-effect-free virtual machine
description:        A functional virtual machine with lazy evaluation, running on Vercel via vercel-hs
homepage:           https://github.com/xazalea/azalea.cloud
license:            MIT
license-file:       LICENSE
author:             Azalea Cloud
maintainer:         azalea@cloud
build-type:         Simple

executable coolvm
  main-is:            Main.hs
  hs-source-dirs:     src
  build-depends:
      base >= 4.14 && < 5
    , aeson >= 2.0
    , bytestring >= 0.11
    , text >= 2.0
    , containers >= 0.6
    , time >= 1.9
    , random >= 1.2
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

library
  exposed-modules:     CoolVM
  hs-source-dirs:     src
  build-depends:
      base >= 4.14 && < 5
    , aeson >= 2.0
    , bytestring >= 0.11
    , text >= 2.0
    , containers >= 0.6
    , time >= 1.9
    , random >= 1.2
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

